tests/fixtures/syntax/valid/comment_after_assertion_block_close.repor
case "comment after assertion block close" {
  $ true
  assert {
    exit 0
  } # trailing comment on the assertion block close line
}
