tests/fixtures/syntax/invalid/unclosed_block_hidden_by_comment.repor
case "x" {
  $ true
  assert {
    exit 0
  # } this closing brace is commented out, so the assertion block never closes
}
